--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@googlemaps/js-api-loader": "^1.16.2",
     "@googlemaps/markerclusterer": "^2.5.1",
     "@googlemaps/react-wrapper": "^1.1.35",
+    "@nextui-org/react": "^2.2.9",
     "@react-google-maps/api": "^2.19.2",
     "@vis.gl/react-google-maps": "^0.3.3",
     "bootstrap": "^5.3.2",
     "compromise": "^14.10.1",
+    "framer-motion": "^10.16.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
