--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^10.16.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.19.0",
     "uuid": "^9.0.1",
     "zustand": "^4.4.6"
